kubernetes/kustomize/backend/overlays/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-ingress
spec:
  ingressClassName: kong
  rules:
    - host: dev-backend-nodejs.gong.k8s.maas
